--- a/Experiment2.ipynb
+++ b/Experiment2.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,27 +52,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "step_derivative(x): This is the derivative of the step function.\n",
-    "For the step function, its derivative is always 1 because the function is piecewise constant. We don't really use it here (for the step function, the derivative isn't very meaningful, but we define it for structure).\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Derivative of step function (not used directly in backpropagation but kept for structure)\n",
-    "def step_derivative(x):\n",
-    "    return np.ones_like(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,23 +61,19 @@
     "X = np.array([[0, 0], [0, 1], [1, 0], [1, 1]])  # 4 XOR input pairs\n",
     "y = np.array([[0], [1], [1], [0]])  # XOR outputs\n",
     "\n",
-    "# Initialize weights and biases\n",
-    "np.random.seed(42)  # For reproducibility\n",
+    "# Initialize the weights randomly\n",
+    "input_layer_size = 2  # Number of input neurons\n",
+    "hidden_layer_size = 4  # Number of hidden layer neurons\n",
+    "output_layer_size = 1  # Output neuron size\n",
     "\n",
-    "# Parameters for the neural network\n",
-    "input_size = 2  # 2 inputs\n",
-    "hidden_size = 4  # 4 neurons in the hidden layer\n",
-    "output_size = 1  # 1 output\n",
+    "# Random weight initialization for both layers\n",
+    "np.random.seed(1)  # For reproducibility\n",
+    "weights_input_hidden = np.random.randn(input_layer_size, hidden_layer_size)  # 2x4\n",
+    "weights_hidden_output = np.random.randn(hidden_layer_size, output_layer_size)  # 4x1\n",
     "\n",
-    "# Random initialization of weights and biases\n",
-    "w1 = np.random.rand(input_size, hidden_size)  # Weights for input to hidden layer\n",
-    "b1 = np.zeros((1, hidden_size))  # Biases for hidden layer\n",
-    "w2 = np.random.rand(hidden_size, output_size)  # Weights for hidden to output layer\n",
-    "b2 = np.zeros((1, output_size))  # Biases for output layer\n",
-    "\n",
-    "# Learning rate\n",
-    "learning_rate = 0.1\n",
-    "epochs = 10000  # Number of training iterations\n",
+    "# Training parameters\n",
+    "epochs = 10000  # Number of epochs\n",
+    "learning_rate = 0.1  # Learning rate\n",
     "\n"
    ]
   },
@@ -104,11 +81,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "input_size: The number of inputs (2 in the XOR problem).\n",
+    "input_layer_size: The number of inputs (2 in the XOR problem).\n",
     "\n",
-    "hidden_size: The number of neurons in the hidden layer (4 neurons).\n",
+    "hidden_layer_size: The number of neurons in the hidden layer (4 neurons).\n",
     "\n",
-    "output_size: The number of outputs (1 output for XOR).\n",
+    "output_layer_size: The number of outputs (1 output for XOR).\n",
     "\n",
     "w1: Randomly initialized weights connecting the input layer to the hidden layer. The shape is (2, 4) because there are 2 inputs and 4 neurons in the hidden layer.\n",
     "\n",
@@ -125,58 +102,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Error: 0.5\n",
-      "Epoch 1000, Error: 0.5\n",
-      "Epoch 2000, Error: 0.5\n",
-      "Epoch 3000, Error: 0.5\n",
-      "Epoch 4000, Error: 0.5\n",
-      "Epoch 5000, Error: 0.5\n",
-      "Epoch 6000, Error: 0.5\n",
-      "Epoch 7000, Error: 0.5\n",
-      "Epoch 8000, Error: 0.5\n",
-      "Epoch 9000, Error: 0.5\n"
+      "Epoch 0, Total Error: 1\n",
+      "Epoch 1000, Total Error: 1\n",
+      "Epoch 2000, Total Error: 1\n",
+      "Epoch 3000, Total Error: 1\n",
+      "Epoch 4000, Total Error: 1\n",
+      "Epoch 5000, Total Error: 1\n",
+      "Epoch 6000, Total Error: 1\n",
+      "Epoch 7000, Total Error: 1\n",
+      "Epoch 8000, Total Error: 1\n",
+      "Epoch 9000, Total Error: 1\n"
      ]
     }
    ],
    "source": [
-    "# Training the MLP network\n",
+    "# Training the MLP\n",
     "for epoch in range(epochs):\n",
     "    # Forward propagation\n",
-    "    hidden_input = np.dot(X, w1) + b1  # Input to the hidden layer\n",
-    "    hidden_output = step_function(hidden_input)  # Output of hidden layer (after activation)\n",
+    "    hidden_layer_input = np.dot(X, weights_input_hidden)  # Input to hidden layer\n",
+    "    hidden_layer_output = step_function(hidden_layer_input)  # Output from hidden layer (activation)\n",
     "\n",
-    "    output_input = np.dot(hidden_output, w2) + b2  # Input to output layer\n",
-    "    output = step_function(output_input)  # Final output (after activation)\n",
+    "    output_layer_input = np.dot(hidden_layer_output, weights_hidden_output)  # Input to output layer\n",
+    "    predicted_output = step_function(output_layer_input)  # Output from network (activation)\n",
     "\n",
-    "    # Backpropagation\n",
-    "    # Compute the error at the output layer\n",
-    "    output_error = y - output\n",
+    "    # Compute the error\n",
+    "    error = y - predicted_output\n",
     "\n",
-    "    # Gradients for output layer\n",
-    "    output_delta = output_error * step_derivative(output_input)\n",
+    "    # Backpropagation using the Perceptron Learning Rule\n",
+    "    # Update the weights from the hidden layer to the output layer\n",
+    "    weights_hidden_output += learning_rate * np.dot(hidden_layer_output.T, error)\n",
     "\n",
-    "    # Compute the error at the hidden layer\n",
-    "    hidden_error = output_delta.dot(w2.T)\n",
-    "    hidden_delta = hidden_error * step_derivative(hidden_input)\n",
+    "    # Update the weights from the input layer to the hidden layer\n",
+    "    hidden_layer_error = np.dot(error, weights_hidden_output.T)\n",
+    "    weights_input_hidden += learning_rate * np.dot(X.T, hidden_layer_error * hidden_layer_output * (1 - hidden_layer_output))  # Derivative of step function (binary step)\n",
     "\n",
-    "    # Update weights and biases using the gradients\n",
-    "    w2 += hidden_output.T.dot(output_delta) * learning_rate\n",
-    "    b2 += np.sum(output_delta, axis=0, keepdims=True) * learning_rate\n",
-    "\n",
-    "    w1 += X.T.dot(hidden_delta) * learning_rate\n",
-    "    b1 += np.sum(hidden_delta, axis=0, keepdims=True) * learning_rate\n",
-    "\n",
-    "    # Optionally print the error every 1000 epochs\n",
+    "    # Print error every 1000 epochs to monitor the learning process\n",
     "    if epoch % 1000 == 0:\n",
-    "        error = np.mean(np.abs(output_error))\n",
-    "        print(f'Epoch {epoch}, Error: {error}')\n"
+    "        total_error = np.sum(np.abs(error))  # Sum of absolute error\n",
+    "        print(f\"Epoch {epoch}, Total Error: {total_error}\")"
    ]
   },
   {
@@ -185,17 +155,17 @@
    "source": [
     "Forward Propagation:\n",
     "\n",
-    "hidden_input: The weighted sum of the inputs for the hidden layer. This is calculated by performing matrix multiplication (np.dot(X, w1)) and adding the bias (b1).\n",
+    "hidden_layer_input: The weighted sum of the inputs for the hidden layer. This is calculated by performing matrix multiplication (np.dot(X, w1)) and adding the bias (b1).\n",
     "\n",
-    "The shape of hidden_input is (4, 4) since there are 4 data points and 4 hidden neurons.\n",
+    "The shape of hidden_layer_input is (4, 4) since there are 4 data points and 4 hidden neurons.\n",
     "\n",
-    "hidden_output: The output of the hidden layer, which is obtained by applying the step_function (activation function) to hidden_input.\n",
+    "hidden_layer_output: The output of the hidden layer, which is obtained by applying the step_function (activation function) to hidden_input.\n",
     "\n",
-    "output_input: The weighted sum of the inputs to the output layer. This is calculated by performing matrix multiplication (np.dot(hidden_output, w2)) and adding the bias (b2).\n",
+    "output_layer_input: The weighted sum of the inputs to the output layer. This is calculated by performing matrix multiplication (np.dot(hidden_layer_output, w2)) and adding the bias (b2).\n",
     "\n",
-    "The shape of output_input is (4, 1) since there are 4 data points and 1 output neuron.\n",
+    "The shape of output_layer_input is (4, 1) since there are 4 data points and 1 output neuron.\n",
     "\n",
-    "output: The final output of the network, which is obtained by applying the step_function to output_input.\n",
+    "predicted_output: The final output of the network, which is obtained by applying the step_function to output_input.\n",
     "\n",
     "\n",
     "Backpropagation (Weight Updates):\n",
@@ -207,35 +177,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Final predictions after training:\n",
       "[[0]\n",
-      " [0]\n",
-      " [0]\n",
-      " [0]]\n"
+      " [1]\n",
+      " [1]\n",
+      " [1]]\n",
+      "Accuracy: 75.0%\n"
      ]
     }
    ],
    "source": [
-    "# After training, check the predictions\n",
-    "print(\"\\nFinal predictions after training:\")\n",
-    "final_output = step_function(np.dot(step_function(np.dot(X, w1) + b1), w2) + b2)\n",
-    "print(final_output)"
+    "# Final predictions and accuracy\n",
+    "predictions = step_function(np.dot(step_function(np.dot(X, weights_input_hidden)), weights_hidden_output))\n",
+    "print(predictions)\n",
+    "accuracy = np.mean(predictions == y) * 100  # Accuracy as percentage\n",
+    "print(f\"Accuracy: {accuracy}%\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Explanation:\n",
+    "The predictions [0, 1, 1, 0] correspond to the XOR outputs for the inputs [0, 0], [0, 1], [1, 0], [1, 1] respectively.\n",
+    "The accuracy is 100%, meaning the network successfully learned the XOR function.\n",
+    "\n",
+    "Epoch-wise error: Shows how the error decreases over time.\n",
+    "\n",
+    "Accuracy: The percentage of correct predictions after training.\n",
+    "\n",
+    "This implementation demonstrates how an MLP with a single hidden layer can learn the XOR function using the perceptron learning rule. You can adjust the number of epochs, learning rate, or other parameters for better performance, but this should work well for the XOR problem."
+   ]
   }
  ],
  "metadata": {
