--- a/Experiment3nn.ipynb
+++ b/Experiment3nn.ipynb
@@ -4,52 +4,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "OBJECTIVE : WAP to implement a three-layer neural network using Tensor flow library (only, no keras) to classify MNIST handwritten digits dataset. Demonstrate the implementation of feed-forward and back-propagation approaches.\n",
+    "Objective:-  WAP to implement a three-layer neural network using Tensor flow library (only, no keras) to classify MNIST handwritten digits dataset. Demonstrate the implementation of feed-forward and back-propagation approaches.\n",
     "\n",
-    "Model Description: Architecture: Input Layer (784 neurons) → Takes flattened 28×28 grayscale images. Hidden Layer 1 (128 neurons) → Sigmoid activation. Hidden Layer 2 (64 neurons) → Sigmoid activation. Output Layer (10 neurons) → Produces logits, passed to Softmax for classification. Hyperparameters: Loss Function: Softmax Cross-Entropy Optimizer: Adam Learning Rate: 0.01 Batch Size: 100 Epochs: 10\n",
-    "\n"
+    "Description of the model:-  This is a three-layer neural network implemented using TensorFlow (without Keras) for classifying handwritten digits from the MNIST dataset.\n",
+    "\n",
+    "The model consists:-\n",
+    "-> Input Layer (784 neurons\\nodes):- Takes flattened 28x28 pixel images.\n",
+    "-> Hidden Layer 1 (128 neurons\\nodes):- Sigmoid activation function.\n",
+    "-> Hidden Layer 2 (64 neurons\\nodes):- Sigmoid activation function.\n",
+    "-> Output Layer (10 neurons\\nodes):- Uses softmax activation for multi-class classification digits (0-9).\n",
+    "-> Loss Function:- softmax Categorical cross-entropy.\n",
+    "-> Optimizer:-  Adam Optimizer.\n",
+    "-> Epochs:- 10\n",
+    "-> Learning Rate:- 0.01\n",
+    "-> Batch size = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "import tensorflow_datasets as tfds\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tensorflow as tf\n",
-    "import tensorflow_datasets as tfds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_PrefetchDataset element_spec=(TensorSpec(shape=(28, 28, 1), dtype=tf.uint8, name=None), TensorSpec(shape=(), dtype=tf.int64, name=None))>"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dataset, info = tfds.load(\"mnist\", as_supervised=True, with_info=True)\n",
     "train_dataset, test_dataset = dataset[\"train\"], dataset[\"test\"]\n",
     "\n",
     "BATCH_SIZE = 100\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Loads the MNIST dataset (a collection of handwritten digits).\n",
     "\n",
-    "as_supervised=True: Returns the dataset as pairs of (image, label).\n",
-    "\n",
-    "with_info=True: Also returns metadata (info) about the dataset, including the dataset’s shape, number of classes, etc.\n",
-    "\n",
-    "\n",
-    "Defines the batch size for training and testing. In each training step, 100 samples will be processed in parallel (this helps improve computational efficiency)."
+    "train_dataset\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,22 +70,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "image = tf.cast(image, tf.float32) / 255.0:\n",
-    "\n",
-    "Converts the image to float32 type and normalizes the pixel values to the range [0, 1] (since pixel values in MNIST are originally between 0 and 255).\n",
-    "image = tf.reshape(image, [-1]):\n",
-    "\n",
-    "Flattens the 28x28 image into a vector of length 784 (28 * 28 = 784), which is a common practice when feeding images into fully connected layers.\n",
-    "\n",
-    "For example, if you have a tensor of shape (28, 28), which represents an image of size 28x28 (28 rows and 28 columns of pixel values), and you want to reshape it to a one-dimensional vector, you don’t necessarily need to explicitly specify the new dimension size (in this case, 784). You can use -1 to allow TensorFlow to automatically compute the correct value for that dimension."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,21 +80,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "train_dataset.map(preprocess): Applies the preprocess function to each image and label pair in the train_dataset.\n",
-    "\n",
-    ".shuffle(10000): Shuffles the training data before batching. This ensures that the model doesn't memorize the order of the data, improving generalization.\n",
-    "\n",
-    ".batch(BATCH_SIZE): Divides the data into batches of size 100.\n",
-    "\n",
-    "For test dataset: The same preprocessing (map(preprocess)) is applied, but no shuffling is performed (since it's for evaluation), and the data is batched."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,19 +123,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "tf.nn.softmax_cross_entropy_with_logits: Computes the softmax cross-entropy loss, which is appropriate for multi-class classification problems like MNIST.\n",
-    "\n",
-    "Softmax: Converts the raw logits into probability distributions.\n",
-    "\n",
-    "Cross-Entropy: Measures the difference between the predicted probabilities and the actual labels (one-hot encoded).\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,21 +138,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "tf.argmax(logits, axis=1): Finds the class with the highest probability in the output logits.\n",
-    "\n",
-    "tf.equal(...): Compares the predicted class with the actual class (the one-hot encoded labels).\n",
-    "\n",
-    "tf.reduce_sum(...): Counts the number of correct predictions in the batch.\n",
-    "\n",
-    "compute_accuracy: Iterates through the dataset and computes the fraction of correct predictions."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,23 +176,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss: 170.0491\n",
-      "Epoch 2, Loss: 67.4476\n",
-      "Epoch 3, Loss: 50.1181\n",
-      "Epoch 4, Loss: 39.9755\n",
-      "Epoch 5, Loss: 35.3683\n",
-      "Epoch 6, Loss: 31.6751\n",
-      "Epoch 7, Loss: 26.0732\n",
-      "Epoch 8, Loss: 24.7058\n",
-      "Epoch 9, Loss: 23.7283\n",
-      "Epoch 10, Loss: 24.6713\n"
+      "Epoch 1, Loss: 53.7979\n",
+      "Epoch 2, Loss: 35.1091\n",
+      "Epoch 3, Loss: 27.0394\n",
+      "Epoch 4, Loss: 22.7045\n",
+      "Epoch 5, Loss: 22.5453\n",
+      "Epoch 6, Loss: 20.0231\n",
+      "Epoch 7, Loss: 19.7101\n",
+      "Epoch 8, Loss: 15.4758\n",
+      "Epoch 9, Loss: 16.7661\n",
+      "Epoch 10, Loss: 16.9674\n"
      ]
     }
    ],
@@ -264,15 +222,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final Training Accuracy (Adam): 0.9848\n",
-      "Final Test Accuracy (Adam): 0.9696\n"
+      "Final Training Accuracy (Adam): 0.9940\n",
+      "Final Test Accuracy (Adam): 0.9761\n"
      ]
     }
    ],
@@ -288,15 +246,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Summary:\n",
+    "Description of Code:\n",
     "\n",
-    "Data Loading and Preprocessing: Loads and preprocesses the MNIST dataset using tensorflow_datasets, normalizing the images, flattening them, and one-hot encoding the labels.\n",
+    "Load Data:- Loads the MNIST dataset (a collection of handwritten digits) using tensorflow_datasets.\n",
     "\n",
-    "Model Definition: A 3-layer neural network with two hidden layers and an output layer.\n",
+    "PreProcess Data:- preprocesses the MNIST dataset by normalizing the images , flattening them, and convert labels to one-hot encoding. \n",
     "\n",
-    "Training: The model is trained using the Adam optimizer and the softmax cross-entropy loss function. The model’s parameters are updated during each training step.\n",
+    "Initialize Model Parameters:- \n",
+    "    Weights (W1, W2, W3) initialized with  random values and biases (b1, b2, b3) initialized as zeros.\n",
     "\n",
-    "Evaluation: After training, the model’s accuracy on the training and test datasets is computed and printed.\n",
+    "Feed-Forward Propagation:-\n",
+    "    hidden_Layer1 = sigmoid(X * W1 + b1).\n",
+    "    hidden_layer2  = sigmoid(a1 * W2 + b2).\n",
+    "    Output Layer:-  logits = softmax(a2 * W3 + b3).\n",
+    "\n",
+    "Loss Calculation:-\n",
+    "   tf.nn.softmax_cross_entropy_with_logits: Computes the softmax cross-entropy loss, which is appropriate for multi-class classification problems like MNIST.\n",
+    "   Softmax: Converts the raw logits into probability distributions.\n",
+    "   Cross-Entropy: Measures the difference between the predicted probabilities and the actual labels (one-hot encoded).\n",
+    "\n",
+    "Backpropagation & Optimization\n",
+    "   Uses AdamOptimizer() and Updates weights and biases.\n",
+    "\n",
+    "Training:- Iterates through 10 epochs with batch size = 100.\n",
+    "           Prints training loss & accuracy.\n",
+    "           The model is trained using the Adam optimizer and the softmax cross-entropy loss function. The model’s parameters are updated during each training step.\n",
+    "\n",
+    "Evaluation:-  After training, the model’s accuracy on the training and test datasets is computed and printed.\n",
     "\n",
     "This code implements a basic neural network from scratch using TensorFlow and trains it to classify handwritten digits from the MNIST dataset."
    ]
@@ -305,24 +281,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "MY COMMENTS: -\n",
+    "MYy Comments: -\n",
     "\n",
-    "Adam optimizer's learning rate must be low. -Use ReLU instead of Sigmoid. -It works better with greater batch size -Faster Compared to SGD\n",
+    "Use Relu Activation function or Variants of relu for Faster Convergence than sigmoid.Set low Learning rate when you use relu. \n",
+    "Use Softmax in output layer for multi-class classification.\n",
     "\n",
-    "Training Accuracy: 0.9906 \n",
+    "Use Sparse categorical cross entropy instead of using categorical cross entropy loss function because no need to do one hot encoding in Sparse categorical cross entropy.\n",
     "\n",
-    "Test Accuracy: 0.9738"
+    "Adam optimizer's learning rate must be low.It works better with greater batch size -Faster Compared to SGD.\n",
+    "\n",
+    "Training Accuracy: 0.9940 \n",
+    "\n",
+    "Test Accuracy: 0.9761"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
