--- a/Experiment3nn.ipynb
+++ b/Experiment3nn.ipynb
@@ -9,14 +9,24 @@
     "Description of the model:-  This is a three-layer neural network implemented using TensorFlow (without Keras) for classifying handwritten digits from the MNIST dataset.\n",
     "\n",
     "The model consists:-\n",
+    "\n",
+    "\n",
     "-> Input Layer (784 neurons\\nodes):- Takes flattened 28x28 pixel images.\n",
+    "\n",
     "-> Hidden Layer 1 (128 neurons\\nodes):- Sigmoid activation function.\n",
+    "\n",
     "-> Hidden Layer 2 (64 neurons\\nodes):- Sigmoid activation function.\n",
+    "\n",
     "-> Output Layer (10 neurons\\nodes):- Uses softmax activation for multi-class classification digits (0-9).\n",
+    "\n",
     "-> Loss Function:- softmax Categorical cross-entropy.\n",
+    "\n",
     "-> Optimizer:-  Adam Optimizer.\n",
+    "\n",
     "-> Epochs:- 10\n",
+    "\n",
     "-> Learning Rate:- 0.01\n",
+    "\n",
     "-> Batch size = 100"
    ]
   },
@@ -281,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "MYy Comments: -\n",
+    "My Comments: -\n",
     "\n",
     "Use Relu Activation function or Variants of relu for Faster Convergence than sigmoid.Set low Learning rate when you use relu. \n",
     "Use Softmax in output layer for multi-class classification.\n",
