--- a/Experiment2.ipynb
+++ b/Experiment2.ipynb
@@ -204,16 +204,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Explanation:\n",
+    "My Comments:-\n",
+    "\n",
     "The predictions [0, 1, 1, 0] correspond to the XOR outputs for the inputs [0, 0], [0, 1], [1, 0], [1, 1] respectively.\n",
-    "The accuracy is 100%, meaning the network successfully learned the XOR function.\n",
+    "If the accuracy is 100%, meaning the network successfully learned the XOR function.\n",
     "\n",
-    "Epoch-wise error: Shows how the error decreases over time.\n",
+    "you can also use Gradient Descent method instead of perceptron learning rule for Backpropagation or Update the wights.\n",
     "\n",
-    "Accuracy: The percentage of correct predictions after training.\n",
+    "You can adjust the number of epochs, learning rate, or other parameters for better performance, but this should work well for the XOR problem.\n",
     "\n",
-    "This implementation demonstrates how an MLP with a single hidden layer can learn the XOR function using the perceptron learning rule. You can adjust the number of epochs, learning rate, or other parameters for better performance, but this should work well for the XOR problem."
+    "Accuracy:- The percentage of correct predictions after training.\n",
+    "\n",
+    "This implementation demonstrates how an MLP with a single hidden layer can learn the XOR function using the perceptron learning rule. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
